Splash progress.