@@ -9,7 +9,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.jfoenix:jfoenix:9.0.10'
+    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
 }
 
 java {
@@ -27,6 +27,12 @@ application {
     applicationName = 'OpenRAMT'
 }
 
+run{
+    jvmArgs = [
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",     // Add this line
+    ]
+}
+
 runtime {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
@@ -37,7 +43,7 @@ runtime {
         def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
         imageOptions += ['--icon', "src/main/resources/openramt.$imgType"]
         installerOptions += ['--resource-dir', "src/main/resources"]
-        installerOptions += ['--vendor', 'NexRX']
+        installerOptions += ['--vendor', 'Nex']
         if(currentOs.windows) {
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
         }
